--- a/week1/index.html
+++ b/week1/index.html
@@ -7,6 +7,13 @@
 <body>
 	<h1>This is the Directory of Student Publications at __, run by Yash.</h1>
 		<h3>We're still under construction, but we should have more information soon!</h3>
+		<h3>We hope to eventually...</h3>
+	<ul>
+		<li>Provide a guide to the university's vibrant student publishing community</li>
+		<li>Help connect student writers with editors of magazines most tailored to their content</li>
+		<li>Provide monthly features on some lesser-known publications, including behind-the-scenes interviews with editors and design teams</li>
+	</ul>
 		<h3>In the interim, you can get send a profile of your magazine or newspaper <a href="mailto:ycanter@gmail.com?subject=Student Publishing Submission">here</a>:</h3>
+	<p>:)</p>
 </body>
 </html>
