--- a/week6/index.html
+++ b/week6/index.html
@@ -5,15 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav id="indexnav"> 
-		<a href="about.html">About</a>
-		<a href="design.html">Design</a>
-		<a href="photography.html">Photography</a>
-		<a href="contact.html">Contact</a>
+	<nav class="clearfix" id="indexnav"> 
+		<a href="about.html">about</a>
+		<a href="design.html">design</a>
+		<a href="photography.html">photography</a>
+		<a href="contact.html">contact</a>
 	</nav>
 	<div id="carousel">
 		<img src="http://placehold.it/650x350">
-		<!-- when hover on the logo, text: click through for recent work -->
 	</div>
 <div class="clearfix" id="social">
 	<a href="http://www.facebook.com"><img src="http://placehold.it/75x75"></a>
