--- a/week6/photography.html
+++ b/week6/photography.html
@@ -5,23 +5,31 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<img src="#" id="logo">
-<nav> 
-		<a href="about.html">About</a>
-		<a href="design.html">Design</a>
-		<a href="photography.html">Photography</a>
-		<a href="contact.html">Contact</a>
-	</nav>
-	<div id="image carousel">
-		<!-- link logo image here; how to do image carousel? -->
-		<!-- when hover on the logo, text: click through for recent work -->
-	</div>
-	<div id="social media">
-		<a href="#"></a>
-		<a href="#"></a>
-		<a href="#"></a>
-		<a href="#"></a>
-		<a href="#"></a>
-	</div>
+<div id="logo">
+<img src="http://placehold.it/650x75">
+</div>
+<nav class="clearfix"> 
+	<a href="about.html">about</a>
+	<a href="design.html">design</a>
+	<a href="photography.html">photography</a>
+	<a href="contact.html">contact</a>
+</nav>
+<div id="designwrap">
+<h1>photography</h1>
+<div id="carousel">
+	<img src="http://placehold.it/650x350">
+</div>
+</div>
+
+<div class="clearfix" id="social">
+	<a href="http://www.facebook.com"><img src="http://placehold.it/75x75"></a>
+	<a href="http://www.twitter.com"><img src="http://placehold.it/75x75"></a>
+	<a href="http://www.instagram.com"><img src="http://placehold.it/75x75"></a>
+	<a href="http://www.tumblr.com"><img src="http://placehold.it/75x75"></a>
+	<a href="http://www.linkedin.com"><img src="http://placehold.it/75x75"></a>
+
+<footer>
+	<p>Copyright 2015, Elizabeth Hackler</p>
+</footer>
 </body>
 </html>
