--- a/week6/design.html
+++ b/week6/design.html
@@ -5,18 +5,23 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<img src="#" id="logo">
-<nav> 
-		<a href="about.html">About</a>
-		<a href="design.html">Design</a>
-		<a href="photography.html">Photography</a>
-		<a href="contact.html">Contact</a>
-	</nav>
-	<h1>design</h1>
-	<div id="carousel">
-		<img src="http://placehold.it/650x350">
-	</div>
-	<div class="clearfix" id="social">
+<div id="logo">
+<img src="http://placehold.it/650x75">
+</div>
+<nav class="clearfix"> 
+	<a href="about.html">about</a>
+	<a href="design.html">design</a>
+	<a href="photography.html">photography</a>
+	<a href="contact.html">contact</a>
+</nav>
+<div id="designwrap">
+<h1>design</h1>
+<div id="carousel">
+	<img src="http://placehold.it/650x350">
+</div>
+</div>
+
+<div class="clearfix" id="social">
 	<a href="http://www.facebook.com"><img src="http://placehold.it/75x75"></a>
 	<a href="http://www.twitter.com"><img src="http://placehold.it/75x75"></a>
 	<a href="http://www.instagram.com"><img src="http://placehold.it/75x75"></a>
