--- a/week8/index.html
+++ b/week8/index.html
@@ -6,63 +6,60 @@
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300' rel='stylesheet' type='text/css'>
 </head>
-
 <body>
-
-<header>
-<h1>Oxford Directory of Student Publications</h1>
-<h3 id="Slogan">We're still under construction, but we should have more information soon!</h3>
-<div id="Search"><p>SEARCH:</p><input type="text"></div>
-</header>
-<hr>
-
-<div class="column1" class="clearfix">
-	<div id="About" class="Block"> 
-	<h3>ABOUT</h3>
-	<p>The Directory of Student Publications is a labour of love by Yashwina Canter, a current English Literature undergrad at Oxford University. She hopes that this site will help curious readers navigate Oxford's lively student journalism scene, will connect student writers with publications most compatible with their content, and will feature lesser-known publications, including behind-the-scenes interviews with editors and design teams.</p>
+	<header>
+		<h1>Oxford Directory of Student Publications</h1>
+		<h3 id="Slogan">We're still under construction, but we should have more information soon!</h3>
+		<div id="Search">
+			<p>SEARCH:</p><input type="text">
+		</div>
+	</header>
+	<hr>
+	<div class="column1" class="clearfix">
+		<section id="About" class="Block"> 
+			<h3>ABOUT</h3>
+			<p>The Directory of Student Publications is a labour of love by Yashwina Canter, a current English Literature undergrad at Oxford University. She hopes that this site will help curious readers navigate Oxford's lively student journalism scene, will connect student writers with publications most compatible with their content, and will feature lesser-known publications, including behind-the-scenes interviews with editors and design teams.</p>
+		</section>
+		<nav class="Block">
+			<ul>
+				<li><a href="#">BY SUBJECT</a></li>
+				<li><a href="#">ALPHABETICALLY</a></li>
+				<li><a href="#">BY COLLEGE</a></li>
+				<li><a href="#">SUBMISSIONS OPEN</a></li>
+				<li><a href="#">BLOG</a></li>
+				<li><a href="mailto:ycanter@gmail.com?subject=Student Publishing">CONTACT US</a></li>
+			</ul>
+		</nav>
 	</div>
-
-<div id="Nav" class="Block">
-	<nav>
-	<ul>
-		<li><a href="#">BY SUBJECT</a></li>
-		<li><a href="#">ALPHABETICALLY</a></li>
-		<li><a href="#">BY COLLEGE</a></li>
-		<li><a href="#">SUBMISSIONS OPEN</a></li>
-		<li><a href="#">BLOG</a></li>
-		<li><a href="mailto:ycanter@gmail.com?subject=Student Publishing">CONTACT US</a></li>
-	</ul>
-	</nav></div>
-</div>
-
-<main class="clearfix">
-	<div id="Feature" class="Block" class="column2">
-	<h3>THIS MONTH'S FEATURE</h3>
-	<img src="images/stack-of-magazines.jpg">
-	<article>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></article>
-	<p>In the interim, you can get send a profile of your magazine or newspaper <a href="#">here</a>:</p><!--GOOGLE FORM -->
-	<a href="#">Previous Features >></a>
+	<main class="clearfix">
+		<section id="Feature" class="Block" class="column2">
+			<h2>THIS MONTH'S FEATURE</h2>
+			<article>
+				<img src="images/stack-of-magazines.jpg">
+				<h3>Feature article</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+			<p>In the interim, you can get send a profile of your magazine or newspaper <a href="#">here</a>:</p><!--GOOGLE FORM -->
+			<a href="#">Previous Features >></a>
+		</section>
+	</main>
+	<div class="column3" class="clearfix">
+		<section id="Submissions" class="Block"> 
+			<h2>SUBMISSIONS FORM</h2>
+			<!-- I'll embed the form here eventually -->
+		</section>
+		<section id="Pitch_Calendar" class="Block">
+			<h2>PITCH CALENDAR</h2>
+			<!-- will embed a calendar visual thing here eventually -->
+		</section>
 	</div>
-</main>
-
-<div class="column3" class="clearfix">
-	<div id="Submissions" class="Block"> 
-	<h3>SUBMISSIONS FORM</h3>
-	<!-- I'll embed the form here eventually -->
-	</div>
-
-	<div id="Pitch Calendar" class="Block">
-		<h3>PITCH CALENDAR</h3>
-		<!-- will embed a calendar visual thing here eventually -->
-	</div>
-</div>
-
-<footer><p>:)</p></footer>
+	<footer>
+		<p>:)</p>
+	</footer>
 </body>
 </html>
