--- a/week8/index.html
+++ b/week8/index.html
@@ -9,16 +9,14 @@
 <body>
 	<header>
 		<h1>Oxford Directory of Student Publications</h1>
-		<h3 id="Slogan">We're still under construction, but we should have more information soon!</h3>
 		<div id="Search">
 			<p>SEARCH:</p><input type="text">
 		</div>
 	</header>
-	<hr>
 	<div class="column1" class="clearfix">
-		<section id="About" class="Block"> 
-			<h3>ABOUT</h3>
-			<p>The Directory of Student Publications is a labour of love by Yashwina Canter, a current English Literature undergrad at Oxford University. She hopes that this site will help curious readers navigate Oxford's lively student journalism scene, will connect student writers with publications most compatible with their content, and will feature lesser-known publications, including behind-the-scenes interviews with editors and design teams.</p>
+		<section class="Block" id="About" > 
+			<h2>ABOUT</h2>
+			<p>The Directory of Student Publications is a labour of love by Yashwina Canter, a current English Literature undergrad at Oxford University. She hopes that this site will help curious readers navigate Oxford's lively student journalism scene, will connect student writers with publications, and will feature lesser-known publications, including behind-the-scenes interviews with editors and design teams.</p>
 		</section>
 		<nav class="Block">
 			<ul>
@@ -32,7 +30,7 @@
 		</nav>
 	</div>
 	<main class="clearfix">
-		<section id="Feature" class="Block" class="column2">
+		<section id="Feature" class="column2">
 			<h2>THIS MONTH'S FEATURE</h2>
 			<article>
 				<img src="images/stack-of-magazines.jpg">
@@ -58,8 +56,6 @@
 			<!-- will embed a calendar visual thing here eventually -->
 		</section>
 	</div>
-	<footer>
-		<p>:)</p>
-	</footer>
+	<footer> :) </footer>
 </body>
 </html>
