--- a/week8/index.html
+++ b/week8/index.html
@@ -10,11 +10,15 @@
 	<header>
 		<h1>Oxford Directory of Student Publications</h1>
 		<div id="Search">
+			<div class="clearfix" id="search-wrap">
 			<p>SEARCH:</p><input type="text">
+			</div>
 		</div>
 	</header>
+	<div class="clearfix">
+	<div class="clearfix">
 	<div class="column1" class="clearfix">
-		<section class="Block" id="About" > 
+		<section class="Block" id="about" > 
 			<h2>ABOUT</h2>
 			<p>The Directory of Student Publications is a labour of love by Yashwina Canter, a current English Literature undergrad at Oxford University. She hopes that this site will help curious readers navigate Oxford's lively student journalism scene, will connect student writers with publications, and will feature lesser-known publications, including behind-the-scenes interviews with editors and design teams.</p>
 		</section>
@@ -29,7 +33,7 @@
 			</ul>
 		</nav>
 	</div>
-	<main class="clearfix">
+	<main>
 		<section id="Feature" class="column2">
 			<h2>THIS MONTH'S FEATURE</h2>
 			<article>
@@ -46,15 +50,17 @@
 			<a href="#">Previous Features >></a>
 		</section>
 	</main>
+	</div>
 	<div class="column3" class="clearfix">
 		<section id="Submissions" class="Block"> 
 			<h2>SUBMISSIONS FORM</h2>
 			<!-- I'll embed the form here eventually -->
 		</section>
-		<section id="Pitch_Calendar" class="Block">
+		<section id="pitch_calendar" class="Block">
 			<h2>PITCH CALENDAR</h2>
 			<!-- will embed a calendar visual thing here eventually -->
 		</section>
+	</div>
 	</div>
 	<footer> :) </footer>
 </body>
