--- a/week8/index.html
+++ b/week8/index.html
@@ -16,7 +16,7 @@
 		</div>
 	</header>
 	<div class="clearfix">
-	<div class="clearfix">
+<!-- 	<div class="clearfix"> -->
 	<div class="column1" class="clearfix">
 		<section class="Block" id="about" > 
 			<h2>ABOUT</h2>
@@ -50,7 +50,7 @@
 			<a href="#">Previous Features >></a>
 		</section>
 	</main>
-	</div>
+<!-- 	</div> -->
 	<div class="column3" class="clearfix">
 		<section id="Submissions" class="Block"> 
 			<h2>SUBMISSIONS FORM</h2>
